--- a/src/org/oop/view/segreteria/Tesi.form
+++ b/src/org/oop/view/segreteria/Tesi.form
@@ -31,7 +31,7 @@
           <text value="Compila il form per stampare la richiesta di tesi"/>
         </properties>
       </component>
-      <grid id="8ef47" layout-manager="GridLayoutManager" row-count="9" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="8ef47" layout-manager="GridLayoutManager" row-count="10" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="1" column="1" row-span="9" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -73,7 +73,7 @@
           </component>
           <component id="4bd50" class="javax.swing.JLabel" binding="profRelatoreLabel">
             <constraints>
-              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Professore relatore:"/>
@@ -81,7 +81,7 @@
           </component>
           <component id="90efa" class="javax.swing.JLabel" binding="titoloTesiLabel">
             <constraints>
-              <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Titolo tesi:"/>
@@ -89,23 +89,15 @@
           </component>
           <component id="d73e4" class="javax.swing.JLabel" binding="luogoDiNascitaLabel">
             <constraints>
-              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Luogo di nascita:"/>
             </properties>
           </component>
-          <component id="26ce2" class="javax.swing.JLabel" binding="emailLabel">
-            <constraints>
-              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-            </constraints>
-            <properties>
-              <text value="Email:"/>
-            </properties>
-          </component>
           <component id="1e8a9" class="javax.swing.JLabel" binding="annoCorsoLabel">
             <constraints>
-              <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Anno di corso:"/>
@@ -129,15 +121,7 @@
           </component>
           <component id="11973" class="javax.swing.JFormattedTextField" binding="luogoNascita">
             <constraints>
-              <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="250" height="20"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
-          <component id="df1b8" class="javax.swing.JFormattedTextField" binding="email">
-            <constraints>
-              <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="250" height="20"/>
               </grid>
             </constraints>
@@ -145,7 +129,7 @@
           </component>
           <component id="c9699" class="javax.swing.JFormattedTextField" binding="annoCorso">
             <constraints>
-              <grid row="6" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="7" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="250" height="20"/>
               </grid>
             </constraints>
@@ -153,7 +137,7 @@
           </component>
           <component id="88991" class="javax.swing.JFormattedTextField" binding="profRelatore">
             <constraints>
-              <grid row="7" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="8" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="250" height="20"/>
               </grid>
             </constraints>
@@ -161,7 +145,7 @@
           </component>
           <component id="fc276" class="javax.swing.JFormattedTextField" binding="titoloTesi">
             <constraints>
-              <grid row="8" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="9" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="250" height="20"/>
               </grid>
             </constraints>
@@ -174,6 +158,38 @@
             <properties>
               <text value="(la data deve essere nel formato gg-mm-aaaa)"/>
             </properties>
+          </component>
+          <component id="195f0" class="javax.swing.JLabel" binding="matricolaLabel">
+            <constraints>
+              <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Matricola"/>
+            </properties>
+          </component>
+          <component id="36ff6" class="javax.swing.JFormattedTextField" binding="matricola">
+            <constraints>
+              <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
+          <component id="ef920" class="javax.swing.JLabel" binding="emailLabel">
+            <constraints>
+              <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Email:"/>
+            </properties>
+          </component>
+          <component id="dc22e" class="javax.swing.JFormattedTextField" binding="email">
+            <constraints>
+              <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="250" height="20"/>
+              </grid>
+            </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
