--- a/src/org/oop/view/segreteria/Iscrizione.form
+++ b/src/org/oop/view/segreteria/Iscrizione.form
@@ -39,12 +39,12 @@
         <properties/>
         <border type="none"/>
         <children>
-          <component id="1f61c" class="javax.swing.JButton" binding="aggiungirigabutton">
+          <component id="1f61c" class="javax.swing.JButton" binding="editButton">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Aggiungi"/>
+              <text value="Modifica"/>
             </properties>
           </component>
           <hspacer id="e4ed4">
@@ -52,7 +52,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
-          <component id="fc3a" class="javax.swing.JButton" binding="eliminarigabutton">
+          <component id="fc3a" class="javax.swing.JButton" binding="deleteButton">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
@@ -60,12 +60,12 @@
               <text value="Elimina"/>
             </properties>
           </component>
-          <component id="5ebf1" class="javax.swing.JButton" binding="confermabutton">
+          <component id="5ebf1" class="javax.swing.JButton" binding="addButton">
             <constraints>
               <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Conferma"/>
+              <text value="Aggiungi"/>
             </properties>
           </component>
         </children>
