--- a/src/org/oop/view/segreteria/Immatricolazione.form
+++ b/src/org/oop/view/segreteria/Immatricolazione.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="immatricolazionepanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="40" left="15" bottom="40" right="15"/>
     <constraints>
-      <xy x="20" y="20" width="794" height="508"/>
+      <xy x="20" y="20" width="808" height="537"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -120,7 +120,7 @@
               <text value="Voto:"/>
             </properties>
           </component>
-          <component id="ca81a" class="javax.swing.JFormattedTextField" binding="voto">
+          <component id="ca81a" class="javax.swing.JFormattedTextField" binding="voto" custom-create="true">
             <constraints>
               <grid row="9" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="250" height="20"/>
@@ -128,7 +128,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="92e1c" class="javax.swing.JFormattedTextField" binding="annoConseguimento1">
+          <component id="92e1c" class="javax.swing.JFormattedTextField" binding="annoConseguimento1" custom-create="true">
             <constraints>
               <grid row="10" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="250" height="20"/>
@@ -160,7 +160,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="4c12e" class="javax.swing.JFormattedTextField" binding="matricola">
+          <component id="4c12e" class="javax.swing.JFormattedTextField" binding="matricola" custom-create="true">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="250" height="20"/>
@@ -218,7 +218,7 @@
               <text value="Anno di Conseguimento 2:"/>
             </properties>
           </component>
-          <component id="b3bbc" class="javax.swing.JFormattedTextField" binding="annoConseguimento2">
+          <component id="b3bbc" class="javax.swing.JFormattedTextField" binding="annoConseguimento2" custom-create="true">
             <constraints>
               <grid row="11" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="250" height="20"/>
