--- a/src/org/oop/view/segreteria/Tirocinio.form
+++ b/src/org/oop/view/segreteria/Tirocinio.form
@@ -111,7 +111,7 @@
               <text value="Matricola:"/>
             </properties>
           </component>
-          <component id="f2b70" class="javax.swing.JFormattedTextField" binding="datanascita">
+          <component id="f2b70" class="javax.swing.JFormattedTextField" binding="datanascita" custom-create="true">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="250" height="20"/>
@@ -127,7 +127,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="3d03b" class="javax.swing.JFormattedTextField" binding="matricola">
+          <component id="3d03b" class="javax.swing.JFormattedTextField" binding="matricola" custom-create="true">
             <constraints>
               <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="250" height="20"/>
@@ -159,7 +159,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="9910" class="javax.swing.JFormattedTextField" binding="cap">
+          <component id="9910" class="javax.swing.JFormattedTextField" binding="cap" custom-create="true">
             <constraints>
               <grid row="8" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="250" height="20"/>
@@ -207,7 +207,7 @@
               <text value="CFU:"/>
             </properties>
           </component>
-          <component id="e4284" class="javax.swing.JFormattedTextField" binding="cfu">
+          <component id="e4284" class="javax.swing.JFormattedTextField" binding="cfu" custom-create="true">
             <constraints>
               <grid row="11" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="250" height="20"/>
