--- a/src/org/oop/view/profilo/Profilo.form
+++ b/src/org/oop/view/profilo/Profilo.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="org.oop.view.profilo.Profilo">
-  <grid id="27dc6" binding="profilopanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="profiloPanel" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="1105" height="578"/>
@@ -204,7 +204,7 @@
                       </grid>
                     </children>
                   </grid>
-                  <component id="8775e" class="javax.swing.JButton" binding="aggiungiprofilo">
+                  <component id="8775e" class="javax.swing.JButton" binding="modificaProfiloButton">
                     <constraints>
                       <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -238,7 +238,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="729bc" class="javax.swing.JTable" binding="insegnamentotable">
+                  <component id="729bc" class="javax.swing.JTable" binding="librettoTable">
                     <constraints/>
                     <properties/>
                     <clientProperties>
@@ -282,7 +282,7 @@
                   </component>
                 </children>
               </grid>
-              <grid id="5ef85" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="5ef85" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="4" column="0" row-span="1" col-span="3" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -292,33 +292,17 @@
                 </properties>
                 <border type="none"/>
                 <children>
-                  <component id="42ed8" class="javax.swing.JButton" binding="addriga">
-                    <constraints>
-                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text value="Aggiungi"/>
-                    </properties>
-                  </component>
-                  <component id="d230b" class="javax.swing.JButton" binding="deleteriga">
-                    <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <text value="Elimina"/>
-                    </properties>
-                  </component>
                   <hspacer id="5e335">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                   </hspacer>
-                  <component id="df83e" class="javax.swing.JButton" binding="modificaButton" default-binding="true">
+                  <component id="df83e" class="javax.swing.JButton" binding="modificaInsegnamentoButton" default-binding="true">
                     <constraints>
-                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Modifica"/>
+                      <text value="Modifica "/>
                     </properties>
                   </component>
                 </children>
