Fix creazione lista insegnamenti agenda

--- a/src/org/oop/view/agenda/Agenda.form
+++ b/src/org/oop/view/agenda/Agenda.form
@@ -84,7 +84,7 @@
                             </properties>
                             <border type="none"/>
                             <children>
-                              <component id="ad04" class="javax.swing.JList" binding="insegnamentilist">
+                              <component id="ad04" class="javax.swing.JList" binding="insegnamentiList">
                                 <constraints/>
                                 <properties>
                                   <background color="-1"/>
