--- a/src/org/oop/view/profilo/FormRegistrazione.form
+++ b/src/org/oop/view/profilo/FormRegistrazione.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="28" y="17" width="528" height="403"/>
+      <xy x="28" y="17" width="535" height="403"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -154,14 +154,6 @@
               <text value="Matricola:"/>
             </properties>
           </component>
-          <component id="ea46f" class="javax.swing.JTextField" binding="matricola">
-            <constraints>
-              <grid row="2" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                <preferred-size width="150" height="-1"/>
-              </grid>
-            </constraints>
-            <properties/>
-          </component>
           <component id="e4867" class="javax.swing.JLabel">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -169,6 +161,14 @@
             <properties>
               <text value="Tipo di corso:"/>
             </properties>
+          </component>
+          <component id="e3f62" class="javax.swing.JFormattedTextField" binding="matricola" custom-create="true">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
           </component>
         </children>
       </grid>
