--- a/src/org/oop/view/agenda/FormAttivitaPeriodica.form
+++ b/src/org/oop/view/agenda/FormAttivitaPeriodica.form
@@ -100,7 +100,7 @@
             </constraints>
             <properties/>
           </component>
-          <component id="6cb67" class="javax.swing.JComboBox" binding="dayField">
+          <component id="6cb67" class="javax.swing.JComboBox" binding="dayBox">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
