--- a/src/org/oop/view/agenda/Agenda.form
+++ b/src/org/oop/view/agenda/Agenda.form
@@ -289,7 +289,16 @@
                           <background color="-395273"/>
                         </properties>
                         <border type="none"/>
-                        <children/>
+                        <children>
+                          <component id="dcdfd" class="javax.swing.JLabel" binding="noAttivitaLabel">
+                            <constraints>
+                              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <text value="Nessuna attivita ancora presente"/>
+                            </properties>
+                          </component>
+                        </children>
                       </grid>
                     </children>
                   </scrollpane>
