Compilazione piano studi

--- a/src/org/oop/view/profilo/FormLibretto.form
+++ b/src/org/oop/view/profilo/FormLibretto.form
@@ -69,9 +69,17 @@
               </component>
             </children>
           </grid>
+          <component id="a84d1" class="javax.swing.JButton" binding="chiudiButton" default-binding="true">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Chiudi"/>
+            </properties>
+          </component>
           <component id="b3072" class="javax.swing.JButton" binding="submit">
             <constraints>
-              <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Salva"/>
